Removal of unnecessary files, Configuration of Auth0

--- a/Blind-LowVision App 1/Blind-LowVision Application.csproj
+++ b/Blind-LowVision App 1/Blind-LowVision Application.csproj
@@ -79,10 +79,12 @@
     <Reference Include="System.Numerics.Vectors" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="MainActivity.cs" />
+    <Compile Include="LoginActivity.cs" />
     <Compile Include="MyAdapter.cs" />
     <Compile Include="Resources\Resource.designer.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="StartupDecisions.cs" />
+    <Compile Include="ToastNotifications.cs" />
     <Compile Include="UserProfile.cs" />
     <Compile Include="UserProfileActivity.cs" />
   </ItemGroup>
@@ -189,20 +191,7 @@
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
-    <AndroidResource Include="Resources\layout\Login.xml">
-      <SubType>Designer</SubType>
-    </AndroidResource>
-  </ItemGroup>
-  <ItemGroup>
-    <AndroidResource Include="Resources\drawable\next.png" />
-  </ItemGroup>
-  <ItemGroup>
     <AndroidResource Include="Resources\layout\activity_user_profile.xml">
-      <SubType>Designer</SubType>
-    </AndroidResource>
-  </ItemGroup>
-  <ItemGroup>
-    <AndroidResource Include="Resources\layout\errorLogin.xml">
       <SubType>Designer</SubType>
     </AndroidResource>
   </ItemGroup>
