--- a/Blind-LowVision App 1/Blind-LowVision Application.csproj
+++ b/Blind-LowVision App 1/Blind-LowVision Application.csproj
@@ -79,6 +79,8 @@
     <Reference Include="System.Numerics.Vectors" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="DonationEditActivity.cs" />
+    <Compile Include="Name.cs" />
     <Compile Include="QrVerification.cs" />
     <Compile Include="ScanActivity.cs" />
     <Compile Include="LoginActivity.cs" />
@@ -107,6 +109,9 @@
     <PackageReference Include="Dexter">
       <Version>1.0.3</Version>
     </PackageReference>
+    <PackageReference Include="Microsoft.CSharp">
+      <Version>4.7.0</Version>
+    </PackageReference>
     <PackageReference Include="Newtonsoft.Json">
       <Version>12.0.3</Version>
     </PackageReference>
@@ -115,6 +120,9 @@
     </PackageReference>
     <PackageReference Include="Xamarin.Android.Support.Compat">
       <Version>28.0.0.3</Version>
+    </PackageReference>
+    <PackageReference Include="Xamarin.Android.Support.Constraint.Layout">
+      <Version>1.1.2</Version>
     </PackageReference>
     <PackageReference Include="Xamarin.Android.Support.Core.UI">
       <Version>28.0.0.3</Version>
